--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,116 +1,131 @@
 <!DOCTYPE html>
-  <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Kind Table</title>
-    <!-- Bootstrap -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="{{  url_for('static', filename='site.css') }}">
-    <script src="http://code.jquery.com/jquery.js"></script>
-    <script src="/static/tooltip.js"></script>
-    {{ moment.include_jquery() }}
-    {{ moment.include_moment() }}
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+  <title>Kind Table</title>
+  <!-- Bootstrap -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+  <link rel="stylesheet" type="text/css" href="{{  url_for('static', filename='site.css') }}">
+  <script src="http://code.jquery.com/jquery.js"></script>
+  <script src="/static/tooltip.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+  {{ moment.include_jquery() }}
+  {{ moment.include_moment() }}
+  <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+  <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
         <!--[if lt IE 9]>
           <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
           <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
           <![endif]-->
-  </head>
-  
-  <body>
-    {% block navbar %}
-      <nav class="navbar navbar-default">
-        <div class="container-fluid">
-          <!--     Brand and toggle get grouped for better mobile display--> 
-          <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-              <span class="sr-only">Toggle navigation</span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="/">Kind Table</a>
-          </div>
-
+        </head>
+        <body>
           {% if current_user.is_authenticated %}
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-              <ul class="nav navbar-nav">
-               <li><a href="/userprofile">My Profile</a></li>
-               <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">My Friends<span class="caret"></span></a>
-                <ul class="dropdown-menu">
-                  {% for friend in session['friends'] %}
-                  <li><a href="{{ url_for('main.show_friend_profile', friend_id =friend[0]) }}">
-                    {% if friend[2] is not none %}{{ friend[2] }}{% else %}{%endif %} {% if friend[3] is not none %}{{ friend[3] }}{% else %}{%endif %}
-                    ({{ friend[1] }})</a></li>
-                    {% endfor %}
-                    <li role="separator" class="divider"></li>
-                    <li><a href="/findfriend">Add a new friend</a></li>
-                    <li><a href="/findmanyfriends">Add multiple friends</a></li>
+            <nav class="navbar navbar-default">
+              <div class="container-fluid">
+               <!--     Brand and toggle get grouped for better mobile display--> 
+                <div class="navbar-header">
+                  <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                  </button>
+                  <a class="navbar-brand" href="/">Kind Table</a>
+                </div>
+                <!-- Collect the nav links, forms, and other content for toggling -->
+                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                  <ul class="nav navbar-nav">
+                   <li><a href="/userprofile">My Profile</a></li>
+                    <li class="dropdown">
+                      <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">My Friends<span class="caret"></span></a>
+                      <ul class="dropdown-menu">
+                        {% for friend in session['friends'] %}
+                        <li>
+                          <a href="{{ url_for('main.show_friend_profile', friend_id =friend[0]) }}">
+                            {% if friend[2] is not none %}{{ friend[2] }}{% else %}{%endif %} {% if friend[3] is not none %}{{ friend[3] }}{% else %}{%endif %}
+                            ({{ friend[1] }})
+                          </a>
+                        </li>
+                        {% endfor %}
+                        <li role="separator" class="divider"></li>
+                        <li><a href="/findfriend">Add a new friend</a></li>
+                        <li><a href="/findmanyfriends">Add multiple friends</a></li>
+                      </ul>    
+                    </li>
+                    <li class="dropdown">
+                      <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">My Parties<span class="caret"></span></a>
+                      <ul class="dropdown-menu">
+                        {% for party in session['parties'] %}
+                          <li><a href="{{ url_for('main.show_party_profile', party_id = party[0]) }}">{{  party[1]  }}</a></li>
+                        {% endfor %}
+                        <li role="separator" class="divider"></li>
+                        <li><a href="/addaparty">Create a party</a></li>
+                      </ul>
+                    </li>
+                  </ul>    
+                  <ul class="nav navbar-nav navbar-right">
+                    <li><a href="/logout">Log out</a></li>
                   </ul>
-                </li>
-                <li class="dropdown">
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">My Parties<span class="caret"></span></a>
-                  <ul class="dropdown-menu">
-                    {% for party in session['parties'] %}
-                    <li><a href="{{ url_for('main.show_party_profile', party_id = party[0]) }}">{{  party[0]  }}</a></li>
-                    {% endfor %}
-                    <li role="separator" class="divider"></li>
-                    <li><a href="/addaparty">Create a party</a></li>
-                  </ul>
-                </li>
-              </ul>    
-              <ul class="nav navbar-nav navbar-right">
-                <li><a href="/logout">Log out</a></li>
-              </ul>
-            </div><!-- /.navbar-collapse -->
+                </div><!-- /.navbar-collapse -->
+              </div><!-- /.container-fluid -->
+            </nav>
           {% else %}
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-              <ul class="nav navbar-nav">
-                <li><a href={{ url_for('auth.register') }}>Register</a></li>
-                <li><a href={{ url_for('auth.login') }}>Log in</a></li>
-              </ul>
-            </div><!-- /.navbar-collapse -->
+            <nav class="navbar navbar-default">
+              <div class="container-fluid">
+               <!--     Brand and toggle get grouped for better mobile display--> 
+                 <div class="navbar-header">
+                  <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                  </button>
+                  <a class="navbar-brand" href="/">Kind Table</a>
+                </div>
+              <!-- Collect the nav links, forms, and other content for toggling -->
+                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                  <ul class="nav navbar-nav">
+                    <li><a href={{ url_for('auth.register') }}>Register</a></li>
+                    <li><a href={{ url_for('auth.login') }}>Log in</a></li>
+                  </ul>
+                </div><!-- /.navbar-collapse -->
+              </div><!-- /.container-fluid -->
+            </nav>
           {% endif %}
-        </div><!-- /.container-fluid -->
-      </nav>
-    {% endblock %}
 
-        <!-- ------------ -->
+          <!-- ------------ -->
 
-    {% block content %}
-      <div class="container-fluid">
-        {% with messages = get_flashed_messages(with_categories=true) %}
-        {% if messages %}
-        {% for category, message in messages %}
-          <div class="alert alert-{{ category }}">{{ message }}</div>
-        {% endfor %}
-        {% endif %}
-        {% endwith %}
-          <div id="extending">
-            {% block page_content %}
+            {% block content %}
+            <div class="container-fluid">
+              {% with messages = get_flashed_messages(with_categories=true) %}
+              {% if messages %}
+              {% for category, message in messages %}
+              <div class="alert alert-{{ category }}">{{ message }}</div>
+              {% endfor %}
+              {% endif %}
+              {% endwith %}
+              <div id="extending">
+                {% block page_content %}
+                {% endblock %}
+              </div>
+            </div>
+            {% endblock %}  <!-- /content -->
+
+            {% block scripts %}
+            {{ moment.include_moment() }}
             {% endblock %}
-          </div>
-      </div>
-    {% endblock %}  <!-- /content -->
 
-    {% block scripts %}
-    {{ moment.include_moment() }}
-    {% endblock %}
+            <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+            <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+            <!-- Include all compiled plugins (below), or include individual files as needed -->
+            <script>
+            $(document).ready(function(){
+              $('[data-toggle="tooltip"]').tooltip();
+            });
+            </script>
 
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="js/bootstrap.min.js"></script>
-    <script>
-    $(document).ready(function(){
-      $('[data-toggle="tooltip"]').tooltip();
-    });
-    </script>
-
-  </body>
-</html>
+          </body>
+          </html>
