--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -67,7 +67,7 @@
                     </li>
                   </ul>    
                   <ul class="nav navbar-nav navbar-right">
-                    <li><a href="/logout">Log out</a></li>
+                    <li><a href="{{ url_for('auth.logout')  }}">Log out</a></li>
                   </ul>
                 </div><!-- /.navbar-collapse -->
               </div><!-- /.container-fluid -->
