--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -42,11 +42,11 @@
                     <li class="dropdown">
                       <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">My Friends<span class="caret"></span></a>
                       <ul class="dropdown-menu">
-                        {% for friend in session['friends'] %}
+                        {% for friend in user.friends %}
                         <li>
                           <a href="{{ url_for('main.show_friend_profile', friend_id =friend[0]) }}">
-                            {% if friend[2] is not none %}{{ friend[2] }}{% else %}{%endif %} {% if friend[3] is not none %}{{ friend[3] }}{% else %}{%endif %}
-                            ({{ friend[1] }})
+                            {% if friend.profile.first_name is not none %}{{ friend.profile.first_name }}{% else %}{%endif %} {% if friend.profile.last_name is not none %}{{ friend.profile.first_name }}{% else %}{%endif %}
+                            ({{ friend.profile.email }})
                           </a>
                         </li>
                         {% endfor %}
@@ -58,8 +58,8 @@
                     <li class="dropdown">
                       <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">My Parties<span class="caret"></span></a>
                       <ul class="dropdown-menu">
-                        {% for party in session['parties'] %}
-                          <li><a href="{{ url_for('main.show_party_profile', party_id = party[0]) }}">{{  party[1]  }}</a></li>
+                        {% for party in user.parties %}
+                          <li><a href="{{ url_for('main.show_party_profile', party_id = party.party_id) }}">{{  party.title  }}</a></li>
                         {% endfor %}
                         <li role="separator" class="divider"></li>
                         <li><a href="/addaparty">Create a party</a></li>
