--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -42,10 +42,10 @@
                     <li class="dropdown">
                       <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">My Friends<span class="caret"></span></a>
                       <ul class="dropdown-menu">
-                        {% for friend in user.friends %}
+                        {% for friend in friends %}
                         <li>
-                          <a href="{{ url_for('main.show_friend_profile', friend_id =friend[0]) }}">
-                            {% if friend.profile.first_name is not none %}{{ friend.profile.first_name }}{% else %}{%endif %} {% if friend.profile.last_name is not none %}{{ friend.profile.first_name }}{% else %}{%endif %}
+                          <a href="{{ url_for('main.show_friend_profile', friend_id=friend.profile.profile_id) }}">
+                            {% if friend.profile.first_name is not none %}{{ friend.profile.first_name }}{% else %}{%endif %} {% if friend.profile.last_name is not none %}{{ friend.profile.last_name }}{% else %}{%endif %}
                             ({{ friend.profile.email }})
                           </a>
                         </li>
@@ -58,7 +58,7 @@
                     <li class="dropdown">
                       <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">My Parties<span class="caret"></span></a>
                       <ul class="dropdown-menu">
-                        {% for party in user.parties %}
+                        {% for party in parties %}
                           <li><a href="{{ url_for('main.show_party_profile', party_id = party.party_id) }}">{{  party.title  }}</a></li>
                         {% endfor %}
                         <li role="separator" class="divider"></li>
