Changed Register to New User? Register here.

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -88,7 +88,7 @@
               <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                   <ul class="nav navbar-nav">
-                    <li><a href={{ url_for('auth.register') }}>Register</a></li>
+                    <li><a href={{ url_for('auth.register') }}>New User? Register here.</a></li>
                     <li><a href={{ url_for('auth.login') }}>Log in</a></li>
                   </ul>
                 </div><!-- /.navbar-collapse -->
