--- a/app/templates/auth/register.html
+++ b/app/templates/auth/register.html
@@ -8,16 +8,35 @@
 </div>
 
 <div class="row well-spaced" style="padding-top: 10em">
-    <div class="col-md-4 col-md-offset-4">
+    <div class="col-md-6 col-md-offset-3">
         <div class = "row round_hidden_div" style="padding-top: 2em">
             <form class="form form-horizontal" method='POST' role="form" name="login">
                 {{ form.csrf_token }}
-                <p>Email address:<br>{{ form.email  }}<br><br>
-                 Password:<br>{{ form.password  }}<br><br>
-                 Verify Password:<br>{{ form.password2  }}<br><br>
-                 
+                <p>First name: {{ form.first_name }}<br><br>
+                    Last name: {{ form.last_name}}<br><br>
+                    General diet you follow: <br>{{ form.diet }}<br>
+                    Diet Reason:{{ form.diet_reason }}<br><br>
+                    Email address: {{ form.email  }}<br><br>
+                 Password: {{ form.password  }}<br><br>
+                 Verify Password: {{ form.password2  }}<br><br>
+
                 {{ form.submit  }}
             </form>
+            <br><br>
+            <h3>Instructions:</h3>
+            <p>The diet reason field is optional, we show that information to your friends 
+            so they can make better decisions about how to make you feel comfortable
+            and welcome at their table.</p>
+
+            <p>We ask for your diet so that the recipes work for you, too.
+             Don't worry if your diet is actually more 
+                complex than these terms, you will get to customize this more later. 
+                (Also, you can change this information at any time.)
+                For now, just pick the diet that fits most closely with how you eat:<br><br>
+                {% for diet in diets %}
+                <strong>{{  diet.diet_type  }}:</strong> {{  diet.description  }}<br>
+                {% endfor %}</p>
+
     </div>
 </div>
 {% endblock %}
