--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -7,15 +7,52 @@
     <h1>Login</h1>
 </div>
 
-<div class="row well-spaced" style="padding-top: 10em">
+
+<div class="row well-spaced">
     <div class="col-md-4 col-md-offset-4">
         <div class = "row round_hidden_div" style="padding-top: 2em">
-            <form class="form form-horizontal" method='POST' role="form" name="login">
-                {{ form.csrf_token }}
-                <p>Email address:<br>{{ form.email  }}<br>
-                 Password:<br>{{ form.password  }}<br><br>
-                {{ form.submit  }}  Remember me: {{ form.remember_me  }}
-            </form>
+            {% from "_formhelpers.html" import render_field %}
+            <form class="form form-horizontal" method="post" role="form">
+            <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
+            <dl>
+                {{ render_field(form.email) }}
+                {{ render_field(form.password) }}<br>
+                {{ render_field(form.remember_me)  }}
+            </dl>
+            <p><input type=submit class="btn btn-s" value=Submit>  <button type="button" class="btn btn-info" data-toggle="modal" data-target="#resetpassword">Reset Password</button>
+        </div>
     </div>
 </div>
+
+ <!-- Modal -->
+<div id="resetpassword" class="modal fade" role="dialog">
+    <div class="modal-dialog">
+        <!-- Modal content-->
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <h4 class="modal-title">Reset Password</h4>
+            </div>
+            <div class="modal-body">
+                <form action="/reset_password" method="POST">
+                    <div class="form-group">
+                        
+                
+                        <input type="submit" value="Reset Password" class="btn btn-success">
+                    </div>
+                 </form>
+            </div>
+        </div>
+    </div>
+</div>
+
+<script>
+    "use strict";
+    $("#addIntol").click(function(){
+        $("#addIntol").hide();
+        $("#addIntolForm").toggle();
+        console.log("show form");
+    });
+</script>
+
 {% endblock %}
