Making resuseable html snippets that work for user and friends

--- a/app/templates/user_profile_page.html
+++ b/app/templates/user_profile_page.html
@@ -5,15 +5,15 @@
     <div class="col-md-6 col-md-offset-3">
         
         <div class = "row round_div" style="padding-top: 2em">
-            <h1>{{  this_user.first_name  }} {{  this_user.last_name  }}</h1><br>
+            <h1>{{  profile.first_name  }} {{  profile.last_name  }}</h1><br>
             <div class="col-md-2">
                 <button type="button" class="btn btn-success" data-toggle="modal" data-target="#userchange">update</button></h1>
             </div>
             <div class="col-md-8">
             
-                <b>Email address:</b> {{ this_user.email }}</b> <br>
-                <b>Diet:</b> {{ this_user.diet.diet_type }}</b><br>
-                <b>Diet Reason:</b> {{ this_user.diet_reason }}
+                <b>Email address:</b> {{ profile.email }}</b> <br>
+                <b>Diet:</b> {{ profile.diet.diet_type }}</b><br>
+                <b>Diet Reason:</b> {{ profile.diet_reason }}
             </div>
         </div>    
                             
@@ -25,7 +25,7 @@
             <b>Intolerances:</b>
             <ul>
                 <div id="userIntolerances">
-                    <li>{% for intolerance in this_user.intolerances %}{{ intolerance.intol_name }}{% if not loop.last %}, {% endif %}{% endfor %}</li>
+                    <li>{% for intolerance in profile.intolerances %}{{ intolerance.intol_name }}{% if not loop.last %}, {% endif %}{% endfor %}</li>
                 </ul>
             </div>
         </div>
@@ -36,7 +36,7 @@
             <div class="col-md-8">
                 <b>Ingredients to avoid:</b>
                 <ul>
-                    {% for avoid in this_user.avoidances %}
+                    {% for avoid in profile.avoidances %}
                     <li>{{ avoid.ingredient }} - (<i>{{ avoid.reason}}</i>)</li>
                     {% endfor %}
                 </ul>
