--- a/app/templates/_formhelpers.html
+++ b/app/templates/_formhelpers.html
@@ -1,6 +1,6 @@
 {% macro render_field(field) %}
   <dt>{{ field.label }}
-  <dd>{{ field(**kwargs)|safe(placeholder="test") }}
+  <dd>{{ field(**kwargs)|safe }}
   {% if field.errors %}
     <ul class=errors>
     {% for error in field.errors %}
