--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -38,14 +38,14 @@
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                   <ul class="nav navbar-nav">
-                   <li><a href="/userprofile">My Profile</a></li>
+                   <li><a href="/userprofile">Dashboard</a></li>
                     <li class="dropdown">
                       <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">My Friends<span class="caret"></span></a>
                       <ul class="dropdown-menu">
                         {% if friends %}
                         {% for friend in friends %}
                         <li>
-                          <a href="{{ url_for('main.show_friend_profile', friend_id=friend.friend_profile.profile_id) }}">
+                          <a href="{{ url_for('profiles.show_friend_profile', friend_id=friend.friend_profile.profile_id) }}">
                             {% if friend.friend_profile.first_name is not none %}{{ friend.friend_profile.first_name }}{% else %}{%endif %} {% if friend.friend_profile.last_name is not none %}{{ friend.friend_profile.last_name }}{% else %}{%endif %}
                             ({{ friend.friend_profile.email }})
                           </a>
@@ -63,7 +63,7 @@
                       <ul class="dropdown-menu">
                         {% if parties %}
                         {% for party in parties %}
-                          <li><a href="{{ url_for('main.show_party_profile', party_id = party.party_id) }}">{{  party.title  }}</a></li>
+                          <li><a href="{{ url_for('profiles.show_party_profile', party_id = party.party_id) }}">{{  party.title  }}</a></li>
                         {% endfor %}
                         {% else %}
                         {% endif %}
