User profile page changed to dashboard and 1 working AJAX route
Settled on "dashboard" instead of user profile and using AJAX routes to
update everything. Will have Dashboard, friend profile and party profile.
You can only open one modal at a time and I would like to stick to using
modals for everything, feels clean and modern. Fixed a javascript bug with
tooltips that I didn't know I had. Had to do with loading js, jquery too many
times and with trying to use a js script for tooltips when Bootstrap does have
it's own.

--- a/app/templates/_formhelpers.html
+++ b/app/templates/_formhelpers.html
@@ -10,3 +10,15 @@
   {% endif %}
   </dd>
 {% endmacro %}
+
+
+{% macro render_inline_field(field) %}
+  {{ field.label }}&emsp;{{ field(**kwargs)|safe }}
+  {% if field.errors %}
+    <ul class=errors>
+    {% for error in field.errors %}
+      <li><font style="color:red;">{{ error }}</font></li>
+    {% endfor %}
+    </ul>
+  {% endif %}
+{% endmacro %}
