--- a/app/static/site.css
+++ b/app/static/site.css
@@ -29,6 +29,32 @@ body {
 }
 
 
+inline-dl {
+  width: 100%;
+  overflow: hidden;
+  background: #ff0;
+  padding: 0;
+  margin: 0
+}
+
+inline-dt {
+  float: left;
+  width: 50%;
+  /* adjust the width; make sure the total of both is 100% */
+  background: #cc0;
+  padding: 0;
+  margin: 0
+}
+
+inline-dd {
+  float: left;
+  width: 50%;
+  /* adjust the width; make sure the total of both is 100% */
+  background: #dd0
+  padding: 0;
+  margin: 0
+}
+
 
 .background {
 background:url('static/background.jpg')no-repeat;
