--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -6,22 +6,23 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
   <title>Kind Table</title>
+
+
   <!-- Bootstrap -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="{{  url_for('static', filename='site.css') }}">
-  <script src="http://code.jquery.com/jquery.js"></script>
-  <script src="/static/tooltip.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+
   {{ moment.include_jquery() }}
   {{ moment.include_moment() }}
+
   <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
         <!--[if lt IE 9]>
           <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
           <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
           <![endif]-->
-        </head>
-        <body>
+</head>
+  <body>
           {% if current_user.is_authenticated %}
             <nav class="navbar navbar-default">
               <div class="container-fluid">
@@ -38,10 +39,11 @@
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                   <ul class="nav navbar-nav">
-                   <li><a href="/userprofile">Dashboard</a></li>
+                   <li><a href="{{  url_for('profiles.show_dashboard')  }}">Dashboard</a></li>
                     <li class="dropdown">
                       <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">My Friends<span class="caret"></span></a>
                       <ul class="dropdown-menu">
+                        {% if friends is defined %}
                         {% if friends %}
                         {% for friend in friends %}
                         <li>
@@ -53,6 +55,7 @@
                         {% endfor %}
                         {% else %}
                         {% endif %}
+                        {% endif %}
                         <li role="separator" class="divider"></li>
                         <li><a href="/findfriend">Add a new friend</a></li>
                         <li><a href="/findmanyfriends">Add multiple friends</a></li>
@@ -61,11 +64,13 @@
                     <li class="dropdown">
                       <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">My Parties<span class="caret"></span></a>
                       <ul class="dropdown-menu">
+                        {% if parties is defined %}
                         {% if parties %}
                         {% for party in parties %}
                           <li><a href="{{ url_for('profiles.show_party_profile', party_id = party.party_id) }}">{{  party.title  }}</a></li>
                         {% endfor %}
                         {% else %}
+                        {% endif %}
                         {% endif %}
                         <li role="separator" class="divider"></li>
                         <li><a href="/addaparty">Create a party</a></li>
@@ -129,11 +134,15 @@
             <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
             <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
             <!-- Include all compiled plugins (below), or include individual files as needed -->
+            <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+
+
             <script>
-            $(document).ready(function(){
-              $('[data-toggle="tooltip"]').tooltip();
-            });
+              $(document).ready(function(){
+                  jQuery('[data-toggle="tooltip"]').tooltip(); 
+              });
             </script>
+
 
           </body>
           </html>
