JSON serializer was not working, fixed. Flash messages were not working
Confirming your account and resetting your password were not working, fixed.
Started adding js, form template and routes for change last name.

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -109,9 +109,7 @@
 
           <!-- ------------ -->
 
-
-            {% block content %}
-              <div class="container-fluid">
+            <div class="container-fluid">
                 <div class="container">
                   {% with messages = get_flashed_messages(with_categories=true) %}
                     {% if messages %}
@@ -120,11 +118,16 @@
                       {% endfor %}
                     {% endif %}
                   {% endwith %}
-                </div>
+                </div></div>
+
+            {% block content %}
+
+
+
                 <div id="extending">
                 {% block page_content %}{% endblock %}
                 </div>
-              </div>
+              
             {% endblock %}  <!-- /content -->
 
             {% block scripts %}
