--- a/app/static/site.css
+++ b/app/static/site.css
@@ -41,7 +41,7 @@ inline-dt {
   float: left;
   width: 50%;
   /* adjust the width; make sure the total of both is 100% */
-  background: #cc0;
+  background: #ff0;
   padding: 0;
   margin: 0
 }
@@ -50,7 +50,7 @@ inline-dd {
   float: left;
   width: 50%;
   /* adjust the width; make sure the total of both is 100% */
-  background: #dd0
+  background: #ff0
   padding: 0;
   margin: 0
 }
