--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -10,16 +10,17 @@
 
 <div class="row well-spaced">
     <div class="col-md-4 col-md-offset-4">
-        <div class = "row round_hidden_div" style="padding-top: 2em">
+        <div class = "row round_hidden_div form-group" style="padding-top: 2em">
             {% from "_formhelpers.html" import render_field %}
-            <form class="form form-horizontal" method="post" role="form">
-            <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
-            <dl>
-                {{ render_field(form.email) }}
-                {{ render_field(form.password) }}<br>
-                {{ render_field(form.remember_me)  }}
-            </dl>
-            <p><input type=submit class="btn btn-s" value=Submit>  <button type="button" class="btn btn-info" data-toggle="modal" data-target="#resetpassword">Reset Password</button>
+            <form name="login-form" id="login-form"class="form form-horizontal" method="post" role="form">
+                <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
+                <dl>
+                    {{ render_field(login_form.email) }}<br>
+                    {{ render_field(login_form.password) }}<br>
+                    {{ render_field(login_form.remember_me)  }}<br>
+                </dl>
+                <p><input name='submit1' type=submit class="btn" value='submit'>  <button type="button" class="btn btn-info" data-toggle="modal" data-target="#resetpassword">Reset Password</button>
+            </form>
         </div>
     </div>
 </div>
@@ -34,25 +35,18 @@
                 <h4 class="modal-title">Reset Password</h4>
             </div>
             <div class="modal-body">
-                <form action="/reset_password" method="POST">
-                    <div class="form-group">
-                        
-                
-                        <input type="submit" value="Reset Password" class="btn btn-success">
+                <div class = "row round_hidden_div form-group" style="padding-top: 2em">
+                        {% from "_formhelpers.html" import render_inline_field %}
+                        <form action="{{ url_for('auth.process_reset')  }}" name="reset_password_request_form" id="reset_password_request_form" class="form form-horizontal" method="post" role="form">
+                            <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
+                            {{ render_inline_field(reset_password_request_form.email) }}
+                            <input name='a-submit2' type=submit class="btn" value="submit">
+                        </form>
                     </div>
-                 </form>
+                </div>     
             </div>
         </div>
     </div>
 </div>
-
-<script>
-    "use strict";
-    $("#addIntol").click(function(){
-        $("#addIntol").hide();
-        $("#addIntolForm").toggle();
-        console.log("show form");
-    });
-</script>
 
 {% endblock %}
